update pom, support breeze and spark version code